# s3sync

./: .gitignore  Cargo.toml  README.md  com.darrenjeppson.s3sync.plist  deploy.sh  help.md  install.sh
src/: main.rs
