[package]
name = "s3sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.78"
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.11.0", features = ["behavior-version-latest"] }
clap = { version = "4.4.12", features = ["derive", "string"] }
clap-num = "1.0.2"
derive_builder = "0.20.0"
notify-debouncer-mini = "0.4.1"
regex = "1.10.2"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_regex = "1.1.0"
serde_yaml = "0.9.34"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
